# langfuse-llm-certification-finance

./: .env.example  .gitignore  README.md  export_results.py  pyproject.toml  requirements.txt  run_certification.py  setup_datasets.py
.github/workflows/: certification.yml
portal/: langfuse_client.py
portal/frontend/: package-lock.json
portal/frontend/src/: styles.css
portal/frontend/src/pages/: Dashboard.tsx
prompts/: finance_expert.md
