[project]
name = "langfuse-llm-certification-finance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.39",
    "cachetools>=5.0",
    "datasets>=2.0",
    "fastapi>=0.115",
    "jinja2>=3.1",
    "langfuse>=3.0,<4.0",
    "openai>=1.0",
    "python-dotenv>=1.0",
    "uvicorn[standard]>=0.30",
]
